Fixed bug for gradle

--- a/customannotation/build.gradle
+++ b/customannotation/build.gradle
@@ -6,10 +6,11 @@ import org.aspectj.tools.ajc.Main
 
 buildscript {
     repositories {
+        jcenter()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.1'
         classpath 'org.aspectj:aspectjtools:1.8.1'
     }
 }
@@ -26,8 +27,6 @@ dependencies {
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.1"
-
     defaultConfig {
         minSdkVersion 17
         targetSdkVersion 26
